--- a/spring-cas/pom.xml
+++ b/spring-cas/pom.xml
@@ -9,6 +9,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-version>3.1.1.RELEASE</spring-version>
         <spring-security-version>3.1.0.RC3</spring-security-version>
+        <config.host>localhost:8081</config.host>
+        <config.root>spring-cas</config.root>
     </properties>
 
     <dependencies>
@@ -67,6 +69,13 @@
     </dependencies>
 
     <build>
+        <finalName>spring-cas</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -75,6 +84,14 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <warName>${config.root}</warName>
                 </configuration>
             </plugin>
         </plugins>
